[package]
name = "nft-tickets-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = { version = "4.0.1" }
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"]}
